<resources>
    <string name="app_name">Zomato</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="popular_cuisines">Popular Cuisines</string>
    <string name="banner_text">Eat healthy and live health. Boost your immune system with healthy recipes</string>
    <string name="offer_text">EVERYTHING \nAT <font color="#000"><b>₹129</b></font> only </string>
    <string name="indian">Indian</string>
    <string name="mexican">Mexican</string>
    <string name="chinese">Chinese</string>
    <string name="french">French</string>
    <string name="chicken_dum_biryani">Chicken Dum Biryani</string>
    <string name="no_image">No Image</string>
    <string name="burger_king">Burger King</string>
    <string name="inside">inside</string>
    <string name="_60_off">60% OFF</string>
    <string name="great_offers_on_nyummy_dishes">Great offers on \nyummy dishes</string>
    <string name="_200_recipes">200+ recipes</string>
    <string name="burgers">Burgers</string>
    <string name="dum_biryani">Dum Biryani</string>
    <string name="chicken_burger">Chicken Burger</string>
</resources>