<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_margin_top"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:id="@+id/banner_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/banner_shape"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img25"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/burger_logo" />

        <TextView
            android:id="@+id/text66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_margin="10dp"
            android:lineSpacingExtra="0dp"
            android:text="@string/banner_text"
            android:textColor="@color/darkGreen"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/banners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner_card"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/card_shape">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Burger King"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="inside"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="0dp"
                android:text="@string/offer_text"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="-10dp"
                android:src="@drawable/barger_1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/card_shape_2">

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="60% OFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="inside"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text5"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="0dp"
                android:text="Great offers on \nyummy dishes"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-20dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/pizza_3" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/popular_cuisines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_cuisines"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/banners"/>

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popular_cuisines"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:padding="5dp"
                android:background="@drawable/cuisines_card_shape">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cuisine_card_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp">
                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/biryani"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indian"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_1"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/title8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200+ recipes"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_1"
                    android:layout_below="@+id/title7"
                    android:layout_marginStart="5dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:padding="5dp"
                android:background="@drawable/cuisines_card_shape">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cuisine_card_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp">
                    <ImageView
                        android:id="@+id/img7"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/mexican_food"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mexican"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_2"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/title10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200+ recipes"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_2"
                    android:layout_below="@+id/title9"
                    android:layout_marginStart="5dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"

            android:layout_marginStart="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:padding="5dp"
                android:background="@drawable/cuisines_card_shape">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cuisine_card_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp">
                    <ImageView
                        android:id="@+id/img8"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/pizza"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chinese"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_3"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/title12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200+ recipes"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_3"
                    android:layout_below="@+id/title11"
                    android:layout_marginStart="5dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/cuisines_card_shape">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cuisine_card_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp">
                    <ImageView
                        android:id="@+id/img9"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/kabab"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/french"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_4"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/title14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200+ recipes"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/cuisine_card_4"
                    android:layout_below="@+id/title13"
                    android:layout_marginStart="5dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <TextView
        android:id="@+id/healthy_snacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Healthy Snacks"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/gridlayout"/>




</RelativeLayout>